--- a/style.css
+++ b/style.css
@@ -93,9 +93,10 @@ a:hover {
 }
 
 .asset-label img {
-  width: 48px;
-  height: 48px;
-  padding: 8px !important;
+  width: 20px;
+  height: 20px;
+  margin: 5px !important;
+  padding: 0px !important;
 }
 
 .assetGroup {
