--- a/style.css
+++ b/style.css
@@ -90,12 +90,14 @@ a:hover {
   position: absolute;
   top: 10px; /* Adjust the top position as needed */
   right: 10px; /* Adjust the right position as needed */
+  margin: 5px !important;
+  padding: 0px !important;
 }
 
 .asset-label img {
   width: 20px;
   height: 20px;
-  margin: 5px !important;
+  margin: 0px !important;
   padding: 0px !important;
 }
 
