updated the asset-label appearance

--- a/style.css
+++ b/style.css
@@ -88,9 +88,13 @@ a:hover {
 
 .asset-label {
   position: absolute;
-  top: 10px; /* Adjust the top position as needed */
-  right: 10px; /* Adjust the right position as needed */
+  top: 0;
+  right: 10px;
+  margin: 0px !important;
   padding: 5px !important;
+  border-top-left-radius: 0px !important;
+  border-top-right-radius: 0px !important;
+  background: #f0ad4e !important;
 }
 
 .asset-label img {
