testing new background for thin

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
 }
 
 html {
-  background: url(https://c0.wallpaperflare.com/preview/99/53/101/tree-trunk-bokeh-nature.jpg);
+  background: url(./img/backgrounds/IMG_20180616_171654-PANO.jpg);
   background-size: cover;
   background-attachment: fixed;
 }
